2008-07-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/ObjectValueFlags.cs,
	  Mono.Debugging.Client/StackFrame.cs,
	  Mono.Debugging.Client/ObjectValue.cs,
	  Mono.Debugging.Client/ObjectValueKind.cs, Mono.Debugging.mdp,
	  Mono.Debugging.Backend/IBacktrace.cs, Makefile.am: Added flags enum
	  to ObjectValue which give information about the origin of the
	  value.

2008-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/ObjectPath.cs: Implemented ToString.
	* Mono.Debugging.Client/AssemblyLine.cs,
	  Mono.Debugging.Client/DebuggerSession.cs: Added support for
	  disassembling files.
	* Mono.Debugging.Client/ObjectValue.cs,
	  Mono.Debugging.Client/ObjectValueKind.cs,
	  Mono.Debugging.Backend/IObjectValueSource.cs: Implemented support
	  for changing the value of an ObjectValue. Improved error reporting.

2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/BreakpointStore.cs,
	  Mono.Debugging.Client/DebuggerSession.cs,
	  Mono.Debugging.Client/Breakpoint.cs: Add support for "invalid"
	  breakpoints (breakpoints placed in locations where there is no
	  source code).

2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/Backtrace.cs: Get only the first stack frame at
	  the begining.
	* Mono.Debugging.Client/ThreadInfo.cs,
	  Mono.Debugging.Client/DebuggerSession.cs: Allow changing the active
	  thread.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/DebuggerSession.cs: Improved thread safety.
	  Implemented Detach.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/Backtrace.cs,
	  Mono.Debugging.Client/StackFrame.cs,
	  Mono.Debugging.Client/IDebuggerEngine.cs,
	  Mono.Debugging.Client/ObjectPath.cs,
	  Mono.Debugging.Client/ThreadInfo.cs,
	  Mono.Debugging.Client/AssemblyLine.cs,
	  Mono.Debugging.Client/DebuggerSession.cs,
	  Mono.Debugging.Client/ProcessInfo.cs,
	  Mono.Debugging.Client/ObjectValue.cs,