@@ -1,3 +1,11 @@
+2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Debugging.Client/StackFrame.cs,
+	  Mono.Debugging.Client/DebuggerSession.cs,
+	  Mono.Debugging.Client/CompletionData.cs, Mono.Debugging.mdp,
+	  Mono.Debugging.Backend/IBacktrace.cs, Makefile.am: Added support
+	  for code completion.
+
 2008-07-07  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Debugging.Client/ObjectValueFlags.cs,
